fdo#53175: docx export, close hyperlinks before fields

Change-Id: Ic723149675c3fe2fca08c4ec095d14c5a39f4a8f